add user data api
