# routes/user.js
@@ -1,0 +1,8 @@
+const express = require("express");
+
+const { getUserData } = require("../controllers/user");
+const router = express.Router();
+
+router.route("/data").get(getUserData);
+
+module.exports = router;
